--- a/user_superadmin/hr_karyawan.html
+++ b/user_superadmin/hr_karyawan.html
@@ -162,12 +162,11 @@ License: You must have a valid license purchased only from themeforest(the above
 										<path d="M4,9.67471899 L10.880262,13.6470401 C10.9543486,13.689814 11.0320333,13.7207107 11.1111111,13.740321 L11.1111111,21.4444444 L4.49070127,17.526473 C4.18655139,17.3464765 4,17.0193034 4,16.6658832 L4,9.67471899 Z M20,9.56911707 L20,16.6658832 C20,17.0193034 19.8134486,17.3464765 19.5092987,17.526473 L12.8888889,21.4444444 L12.8888889,13.6728275 C12.9050191,13.6647696 12.9210067,13.6561758 12.9368301,13.6470401 L20,9.56911707 Z" id="Combined-Shape" fill="#000000" />
 										<path d="M4.21611835,7.74669402 C4.30015839,7.64056877 4.40623188,7.55087574 4.5299008,7.48500698 L11.5299008,3.75665466 C11.8237589,3.60013944 12.1762411,3.60013944 12.4700992,3.75665466 L19.4700992,7.48500698 C19.5654307,7.53578262 19.6503066,7.60071528 19.7226939,7.67641889 L12.0479413,12.1074394 C11.9974761,12.1365754 11.9509488,12.1699127 11.9085461,12.2067543 C11.8661433,12.1699127 11.819616,12.1365754 11.7691509,12.1074394 L4.21611835,7.74669402 Z" id="Path" fill="#000000" opacity="0.3" />
 									</g>
-								</svg></span><span class="kt-menu__link-text">Stock</span><i class="kt-menu__ver-arrow la la-angle-right"></i></a>
+								</svg></span><span class="kt-menu__link-text">Inventory</span><i class="kt-menu__ver-arrow la la-angle-right"></i></a>
 									<div class="kt-menu__submenu "><span class="kt-menu__arrow"></span>
 										<ul class="kt-menu__subnav">
-											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/stock.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Stock</span></a></li>
-											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/request.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Request In</span></a></li>
-											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/pembelian.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Pembelian</span></a></li>
+											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/inventory_studio.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Inventory Studio</span></a></li>
+											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/inventory_history_stock.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">History Stock</span></a></li>
 										</ul>
 									</div>
 								</li>
@@ -179,8 +178,9 @@ License: You must have a valid license purchased only from themeforest(the above
 								</svg></span><span class="kt-menu__link-text">Human Resources</span><i class="kt-menu__ver-arrow la la-angle-right"></i></a>
 									<div class="kt-menu__submenu "><span class="kt-menu__arrow"></span>
 										<ul class="kt-menu__subnav">
-											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/hr_laporan.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Laporan HR</span></a></li>
+											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/hr_laporan.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Laporan Karyawan</span></a></li>
 											<li class="kt-menu__item  kt-menu__item--active" aria-haspopup="true"><a href="user_superadmin/hr_karyawan.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Daftar Karyawan</span></a></li>
+											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/hr_request_dayoff.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Request Day-Off</span></a></li>
 										</ul>
 									</div>
 								</li>
@@ -325,13 +325,13 @@ License: You must have a valid license purchased only from themeforest(the above
 							<div class="kt-container  kt-container--fluid ">
 								<div class="kt-subheader__main">
 									<h3 class="kt-subheader__title">
-										Human Resources </h3>
+										Human resources </h3>
 									<span class="kt-subheader__separator kt-hidden"></span>
 									<div class="kt-subheader__breadcrumbs">
 										<a href="user_superadmin/hr_karyawan.html" class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
 										<span class="kt-subheader__breadcrumbs-separator"></span>
 										<a href="user_superadmin/hr_karyawan.html" class="kt-subheader__breadcrumbs-link">
-											Daftar Karyawan </a>
+											Daftar karyawan </a>
 									</div>
 								</div>
 							</div>
@@ -360,17 +360,6 @@ License: You must have a valid license purchased only from themeforest(the above
 										</div>
 										<div class="kt-portlet__body">
                                             <table class="table table-bordered table-hover table-checkable" id="table_karyawan"></table>
-										</div>
-										<div class="kt-portlet__foot kt-hidden">
-											<div class="row">
-												<div class="col-lg-6">
-													Portlet footer:
-												</div>
-												<div class="col-lg-6">
-													<button type="submit" class="btn btn-primary">Submit</button>
-													<span class="kt-margin-left-10">or <a href="#" class="kt-link kt-font-bold">Cancel</a></span>
-												</div>
-											</div>
 										</div>
 									</div>
 
