--- a/user_superadmin/inventory_history_stock.html
+++ b/user_superadmin/inventory_history_stock.html
@@ -18,7 +18,7 @@ License: You must have a valid license purchased only from themeforest(the above
 	<head>
 		<base href="../">
 		<meta charset="utf-8" />
-		<title>Laporan Karyawan | Superadmin Fabulash</title>
+		<title>History Stock | Superadmin Fabulash</title>
 		<meta name="description" content="Updates and statistics">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -28,6 +28,7 @@ License: You must have a valid license purchased only from themeforest(the above
 		<!--end::Fonts -->
 
 		<!--begin::Page Vendors Styles(used by this page) -->
+		<link href="assets/plugins/custom/datatables/datatables.bundle.css" rel="stylesheet" type="text/css">
 
 		<!--end::Page Vendors Styles -->
 
@@ -155,7 +156,7 @@ License: You must have a valid license purchased only from themeforest(the above
 										</ul>
 									</div>
 								</li>
-								<li class="kt-menu__item  kt-menu__item--submenu" aria-haspopup="true" data-ktmenu-submenu-toggle="hover"><a href="javascript:;" class="kt-menu__link kt-menu__toggle"><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
+								<li class="kt-menu__item  kt-menu__item--submenu kt-menu__item--open kt-menu__item--here" aria-haspopup="true" data-ktmenu-submenu-toggle="hover"><a href="javascript:;" class="kt-menu__link kt-menu__toggle"><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
 									<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 										<rect id="bound" x="0" y="0" width="24" height="24" />
 										<path d="M4,9.67471899 L10.880262,13.6470401 C10.9543486,13.689814 11.0320333,13.7207107 11.1111111,13.740321 L11.1111111,21.4444444 L4.49070127,17.526473 C4.18655139,17.3464765 4,17.0193034 4,16.6658832 L4,9.67471899 Z M20,9.56911707 L20,16.6658832 C20,17.0193034 19.8134486,17.3464765 19.5092987,17.526473 L12.8888889,21.4444444 L12.8888889,13.6728275 C12.9050191,13.6647696 12.9210067,13.6561758 12.9368301,13.6470401 L20,9.56911707 Z" id="Combined-Shape" fill="#000000" />
@@ -165,11 +166,11 @@ License: You must have a valid license purchased only from themeforest(the above
 									<div class="kt-menu__submenu "><span class="kt-menu__arrow"></span>
 										<ul class="kt-menu__subnav">
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/inventory_studio.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Inventory Studio</span></a></li>
-											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/inventory_history_stock.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">History Stock</span></a></li>
+											<li class="kt-menu__item  kt-menu__item--active" aria-haspopup="true"><a href="user_superadmin/inventory_history_stock.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">History Stock</span></a></li>
 										</ul>
 									</div>
 								</li>
-								<li class="kt-menu__item  kt-menu__item--submenu kt-menu__item--open kt-menu__item--here" aria-haspopup="true" data-ktmenu-submenu-toggle="hover"><a href="javascript:;" class="kt-menu__link kt-menu__toggle"><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
+								<li class="kt-menu__item  kt-menu__item--submenu" aria-haspopup="true" data-ktmenu-submenu-toggle="hover"><a href="javascript:;" class="kt-menu__link kt-menu__toggle"><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
 								    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 								        <rect x="0" y="0" width="24" height="24"/>
 								        <path d="M9,15 L7.5,15 C6.67157288,15 6,15.6715729 6,16.5 C6,17.3284271 6.67157288,18 7.5,18 C8.32842712,18 9,17.3284271 9,16.5 L9,15 Z M9,15 L9,9 L15,9 L15,15 L9,15 Z M15,16.5 C15,17.3284271 15.6715729,18 16.5,18 C17.3284271,18 18,17.3284271 18,16.5 C18,15.6715729 17.3284271,15 16.5,15 L15,15 L15,16.5 Z M16.5,9 C17.3284271,9 18,8.32842712 18,7.5 C18,6.67157288 17.3284271,6 16.5,6 C15.6715729,6 15,6.67157288 15,7.5 L15,9 L16.5,9 Z M9,7.5 C9,6.67157288 8.32842712,6 7.5,6 C6.67157288,6 6,6.67157288 6,7.5 C6,8.32842712 6.67157288,9 7.5,9 L9,9 L9,7.5 Z M11,13 L13,13 L13,11 L11,11 L11,13 Z M13,11 L13,7.5 C13,5.56700338 14.5670034,4 16.5,4 C18.4329966,4 20,5.56700338 20,7.5 C20,9.43299662 18.4329966,11 16.5,11 L13,11 Z M16.5,13 C18.4329966,13 20,14.5670034 20,16.5 C20,18.4329966 18.4329966,20 16.5,20 C14.5670034,20 13,18.4329966 13,16.5 L13,13 L16.5,13 Z M11,16.5 C11,18.4329966 9.43299662,20 7.5,20 C5.56700338,20 4,18.4329966 4,16.5 C4,14.5670034 5.56700338,13 7.5,13 L11,13 L11,16.5 Z M7.5,11 C5.56700338,11 4,9.43299662 4,7.5 C4,5.56700338 5.56700338,4 7.5,4 C9.43299662,4 11,5.56700338 11,7.5 L11,11 L7.5,11 Z" fill="#000000" fill-rule="nonzero"/>
@@ -177,10 +178,10 @@ License: You must have a valid license purchased only from themeforest(the above
 								</svg></span><span class="kt-menu__link-text">Human Resources</span><i class="kt-menu__ver-arrow la la-angle-right"></i></a>
 									<div class="kt-menu__submenu "><span class="kt-menu__arrow"></span>
 										<ul class="kt-menu__subnav">
-											<li class="kt-menu__item  kt-menu__item--active" aria-haspopup="true"><a href="user_superadmin/hr_laporan.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Laporan Karyawan</span></a></li>
+											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/hr_laporan.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Laporan Karyawan</span></a></li>
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/hr_karyawan.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Daftar Karyawan</span></a></li>
-											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/hr_request_dayoff.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Request Day-Off</span></a></li>
-										</ul>
+                                            <li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/hr_request_dayoff.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Request Day-Off</span></a></li>
+                                        </ul>
 									</div>
 								</li>
 								<li class="kt-menu__item  kt-menu__item--submenu" aria-haspopup="true" data-ktmenu-submenu-toggle="hover"><a href="javascript:;" class="kt-menu__link kt-menu__toggle"><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
@@ -324,13 +325,13 @@ License: You must have a valid license purchased only from themeforest(the above
 							<div class="kt-container  kt-container--fluid ">
 								<div class="kt-subheader__main">
 									<h3 class="kt-subheader__title">
-										Human resources </h3>
+										Inventory </h3>
 									<span class="kt-subheader__separator kt-hidden"></span>
 									<div class="kt-subheader__breadcrumbs">
-										<a href="user_superadmin/hr_laporan.html" class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
+										<a href="user_superadmin/inventory_history_stock.html" class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
 										<span class="kt-subheader__breadcrumbs-separator"></span>
-										<a href="user_superadmin/hr_laporan.html" class="kt-subheader__breadcrumbs-link">
-											Laporan karyawan </a>
+										<a href="user_superadmin/inventory_history_stock.html" class="kt-subheader__breadcrumbs-link">
+											History stock </a>
 									</div>
 								</div>
 							</div>
@@ -341,105 +342,31 @@ License: You must have a valid license purchased only from themeforest(the above
 						<!-- begin:: Content -->
 						<div class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid">
 
-                            <div class="row justify-space-between kt-margin-0">
-                                <h4 class="vertical-align" style="margin-bottom: 20px;">Laporan Karyawan</h4>
-                                <!-- <div class="col-lg-3 col-sm-4" style="padding:unset;margin-bottom: 20px;">
-                                    <div class="input-group date">
-										<input readonly type="text" class="form-control kt-input" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="kt_search_waktu"/>
-										<div class="input-group-append">
-											<span class="input-group-text">
-												<i class="la la-calendar"></i>
-											</span>
+                            <div class="row row-centered">
+
+								<div class="col-12">
+
+                                    <!--begin::Portlet-->
+									<div class="kt-portlet">
+										<div class="kt-portlet__head">
+											<div class="kt-portlet__head-label">
+												<span class="kt-portlet__head-icon">
+													<i class="flaticon2-cube-1"></i>
+												</span>
+												<h3 class="kt-portlet__head-title">
+													History Stock
+												</h3>
+											</div>
 										</div>
-                                    </div>
-                                </div> -->
-							</div>
+										<div class="kt-portlet__body">
 
-							<div class="row">
+										</div>
+									</div>
 
-                                <div class="col-lg-6 col-sm-6">
-                                    <div class="kt-portlet kt-portlet--height-fluid">
-                                    	<div class="kt-widget14">
-                                    		<div class="kt-widget14__header" style="margin-bottom:0px;">
-                                    			<h6>
-                                    				Ketepatan Waktu Masuk
-                                    			</h6>
-                                    			<h3 class="kt-widget14__desc kt-margin-t-5 color-main-dark">
-                                    				Ica
-                                    			</h3>
-                                    		</div>
-                                    	</div>
-                                    </div>
-                                </div>
-
-                                <div class="col-lg-6 col-sm-6">
-                                    <div class="kt-portlet kt-portlet--height-fluid">
-                                    	<div class="kt-widget14">
-                                    		<div class="kt-widget14__header" style="margin-bottom:0px;">
-                                    			<h6>
-                                    				Keterlambatan Waktu Masuk
-                                    			</h6>
-                                    			<h3 class="kt-widget14__desc kt-margin-t-5 color-main-dark">
-                                    				Ica
-                                    			</h3>
-                                    		</div>
-                                    	</div>
-                                    </div>
-                                </div>
-
-                                <div class="col-lg-6 col-sm-6">
-                                    <div class="kt-portlet kt-portlet--height-fluid">
-                                    	<div class="kt-widget14">
-                                    		<div class="kt-widget14__header" style="margin-bottom:0px;">
-                                    			<h6>
-                                    				Jumlah Treatment Tertinggi
-                                    			</h6>
-                                    			<h3 class="kt-widget14__desc kt-margin-t-5 color-main-dark">
-                                    				Ica
-                                    			</h3>
-                                    		</div>
-                                    	</div>
-                                    </div>
-                                </div>
-
-                                <div class="col-lg-6 col-sm-6">
-                                    <div class="kt-portlet kt-portlet--height-fluid">
-                                    	<div class="kt-widget14">
-                                    		<div class="kt-widget14__header" style="margin-bottom:0px;">
-                                    			<h6>
-                                    				Jumlah Treatment Terendah
-                                    			</h6>
-                                    			<h3 class="kt-widget14__desc kt-margin-t-5 color-main-dark">
-                                    				Ica
-                                    			</h3>
-                                    		</div>
-                                    	</div>
-                                    </div>
-                                </div>
+									<!--end::Portlet-->
+								</div>
 
 							</div>
-
-                            <div class="kt-portlet kt-portlet--height-fluid">
-                                <div class="kt-portlet__body kt-portlet__body--fluid">
-                            		<div class="kt-widget12">
-                                        <div class="kt-widget14__header kt-margin-b-30">
-                                            <div class="row kt-margin-0 justify-space-between">
-                                    			<h5 class="vertical-align">
-                                    				Jumlah Treatment
-                                    			</h5>
-                                                <div class="col-lg-3 col-sm-4">
-                                                    <select class="form-control" name="chart_range">
-        												<option>Last 30 Days</option>
-        												<option>Last 14 Days</option>
-        												<option>Last 7 Days</option>
-        											</select>
-                                                </div>
-                                            </div>
-                                		</div>
-                            			<div class="chart-height" id="chart_treatment"></div>
-                            		</div>
-                            	</div>
-                            </div>
 
 						</div>
 
@@ -510,76 +437,13 @@ License: You must have a valid license purchased only from themeforest(the above
 		<!--end::Global Theme Bundle -->
 
 		<!--begin::Page Vendors(used by this page) -->
-		<script src="assets/js/vendor/amcharts/core.js" type="text/javascript"></script>
-		<script src="assets/js/vendor/amcharts/charts.js" type="text/javascript"></script>
-		<script src="assets/js/vendor/amcharts/animated.js" type="text/javascript"></script>
+		<script src="assets/plugins/custom/datatables/datatables.bundle.js" type="text/javascript"></script>
 
 		<!--end::Page Vendors -->
 
 		<!--begin::Page Scripts(used by this page) -->
+		<script src="assets/js/script/datatable_superadmin.js"></script>
 		<script src="assets/js/custom/datepicker.js" type="text/javascript"></script>
-
-		<script>
-			am4core.ready(function() {
-
-			// Themes begin
-			am4core.useTheme(am4themes_animated);
-			// Themes end
-
-			/**
-			 * Chart design taken from Samsung health app
-			 */
-
-			var chart = am4core.create("chart_treatment", am4charts.XYChart);
-			chart.paddingRight = 20;
-			chart.hiddenState.properties.opacity = 0; // this creates initial fade-in
-
-			chart.dataSource.url = "source/chart/treatment.json";
-
-			chart.dateFormatter.inputDateFormat = "YYYY-MM-dd";
-			chart.zoomOutButton.disabled = true;
-
-			var dateAxis = chart.xAxes.push(new am4charts.DateAxis());
-			dateAxis.renderer.grid.template.strokeOpacity = 0;
-			dateAxis.renderer.minGridDistance = 10;
-			dateAxis.dateFormats.setKey("day", "d");
-			dateAxis.tooltip.hiddenState.properties.opacity = 1;
-			dateAxis.tooltip.hiddenState.properties.visible = true;
-
-			var valueAxis = chart.yAxes.push(new am4charts.ValueAxis());
-
-			var series = chart.series.push(new am4charts.ColumnSeries);
-			series.dataFields.valueY = "treatments";
-			series.dataFields.dateX = "date";
-			series.tooltipText = "Treatment : [bold]{valueY.value}";
-			series.tooltip.pointerOrientation = "vertical";
-			series.tooltip.hiddenState.properties.opacity = 1;
-			series.tooltip.hiddenState.properties.visible = true;
-
-			var columnTemplate = series.columns.template;
-			columnTemplate.width = 20;
-			columnTemplate.column.cornerRadiusTopLeft = 20;
-			columnTemplate.column.cornerRadiusTopRight = 20;
-			columnTemplate.strokeOpacity = 0;
-
-			columnTemplate.adapter.add("fill", function (fill, target) {
-				return am4core.color("#8cdbd7");
-			})
-
-			chart.cursor = new am4charts.XYCursor();
-			chart.cursor.behavior = "none";
-
-			cursor.events.on("cursorpositionchanged", updateTooltip);
-			dateAxis.events.on("datarangechanged", updateTooltip);
-
-			function updateTooltip() {
-				dateAxis.showTooltipAtPosition(0.5);
-				series.showTooltipAtPosition(0.5, 0);
-				series.tooltip.validate(); // otherwise will show other columns values for a second
-			}
-
-			}); // end am4core.ready()
-		</script>
 
 		<!--end::Page Scripts -->
 	</body>
