--- a/user_gudang/inventory_studio.html
+++ b/user_gudang/inventory_studio.html
@@ -18,7 +18,7 @@ License: You must have a valid license purchased only from themeforest(the above
 	<head>
 		<base href="../">
 		<meta charset="utf-8" />
-		<title>History Stock | Superadmin Fabulash</title>
+		<title>Inventory Studio | Superadmin Fabulash</title>
 		<meta name="description" content="Updates and statistics">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -165,8 +165,9 @@ License: You must have a valid license purchased only from themeforest(the above
 								</svg></span><span class="kt-menu__link-text">Inventory</span><i class="kt-menu__ver-arrow la la-angle-right"></i></a>
 									<div class="kt-menu__submenu "><span class="kt-menu__arrow"></span>
 										<ul class="kt-menu__subnav">
-											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/inventory_studio.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Inventory Studio</span></a></li>
-											<li class="kt-menu__item  kt-menu__item--active" aria-haspopup="true"><a href="user_superadmin/inventory_history_stock.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">History Stock</span></a></li>
+											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/inventory_gudang.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Gudang</span></a></li>
+											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/inventory_studio.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Studio</span></a></li>
+											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/inventory_therapist.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Therapist</span></a></li>
 										</ul>
 									</div>
 								</li>
@@ -328,10 +329,10 @@ License: You must have a valid license purchased only from themeforest(the above
 										Inventory </h3>
 									<span class="kt-subheader__separator kt-hidden"></span>
 									<div class="kt-subheader__breadcrumbs">
-										<a href="user_superadmin/inventory_history_stock.html" class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
+										<a href="user_superadmin/inventory_studio.html" class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
 										<span class="kt-subheader__breadcrumbs-separator"></span>
-										<a href="user_superadmin/inventory_history_stock.html" class="kt-subheader__breadcrumbs-link">
-											History stock </a>
+										<a href="user_superadmin/inventory_studio.html" class="kt-subheader__breadcrumbs-link">
+											Inventory studio </a>
 									</div>
 								</div>
 							</div>
@@ -354,7 +355,7 @@ License: You must have a valid license purchased only from themeforest(the above
 													<i class="flaticon2-cube-1"></i>
 												</span>
 												<h3 class="kt-portlet__head-title">
-													History Stock
+													Inventory Studio
 												</h3>
 											</div>
 										</div>
