--- a/user_superadmin/md_komisi.html
+++ b/user_superadmin/md_komisi.html
@@ -165,8 +165,9 @@ License: You must have a valid license purchased only from themeforest(the above
 								</svg></span><span class="kt-menu__link-text">Inventory</span><i class="kt-menu__ver-arrow la la-angle-right"></i></a>
 									<div class="kt-menu__submenu "><span class="kt-menu__arrow"></span>
 										<ul class="kt-menu__subnav">
-											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/inventory_studio.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Inventory Studio</span></a></li>
-											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/inventory_history_stock.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">History Stock</span></a></li>
+											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/inventory_gudang.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Gudang</span></a></li>
+											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/inventory_studio.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Studio</span></a></li>
+											<li class="kt-menu__item " aria-haspopup="true"><a href="user_superadmin/inventory_therapist.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Therapist</span></a></li>
 										</ul>
 									</div>
 								</li>
