Perbaikan table supervisor studio karyawan inventory

--- a/user_supervisor_studio/karyawan_detail.html
+++ b/user_supervisor_studio/karyawan_detail.html
@@ -459,12 +459,57 @@ License: You must have a valid license purchased only from themeforest(the above
         											</ul>
                                                     <div class="tab-content">
         												<div class="tab-pane active" id="tab-sisa" role="tabpanel">
+															<form class="kt-margin-b-10">
+				    											<div class="row justify-space-between">
+																	<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
+																		<input readonly type="text" class="form-control kt-input_2" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="kt_search_waktu_2"/>
+																		<div class="input-group-append">
+																			<span class="input-group-text">
+																				<i class="la la-calendar"></i>
+																			</span>
+																		</div>
+																	</div>
+																	<div class="col-lg-4 col-sm-6">
+					    												<input type="text" class="form-control kt-input" placeholder="Search" id="kt_search_all">
+																	</div>
+				    											</div>
+				    										</form>
                                                             <table class="table table-bordered table-hover table-checkable" id="table_karyawan_inventory_sisa"></table>
         												</div>
         												<div class="tab-pane" id="tab-penggunaan" role="tabpanel">
+															<form class="kt-margin-b-10">
+				    											<div class="row justify-space-between">
+																	<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
+																		<input readonly type="text" class="form-control kt-input_2" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="kt_search_waktu_2"/>
+																		<div class="input-group-append">
+																			<span class="input-group-text">
+																				<i class="la la-calendar"></i>
+																			</span>
+																		</div>
+																	</div>
+																	<div class="col-lg-4 col-sm-6">
+					    												<input type="text" class="form-control kt-input" placeholder="Search" id="kt_search_all">
+																	</div>
+				    											</div>
+				    										</form>
                                                             <table class="table table-bordered table-hover table-checkable" id="table_karyawan_inventory_penggunaan"></table>
         												</div>
         												<div class="tab-pane" id="tab-request" role="tabpanel">
+															<form class="kt-margin-b-10">
+				    											<div class="row justify-space-between">
+																	<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
+																		<input readonly type="text" class="form-control kt-input_2" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="kt_search_waktu_2"/>
+																		<div class="input-group-append">
+																			<span class="input-group-text">
+																				<i class="la la-calendar"></i>
+																			</span>
+																		</div>
+																	</div>
+																	<div class="col-lg-4 col-sm-6">
+					    												<input type="text" class="form-control kt-input" placeholder="Search" id="kt_search_all">
+																	</div>
+				    											</div>
+				    										</form>
                                                             <table class="table table-bordered table-hover table-checkable" id="table_karyawan_inventory_request"></table>
         												</div>
         											</div>
