Penghilangan modal-lg

--- a/user_superadmin/hr_karyawan.html
+++ b/user_superadmin/hr_karyawan.html
@@ -374,7 +374,7 @@ License: You must have a valid license purchased only from themeforest(the above
 
 							<!--begin::Modal-->
 							<div class="modal fade" id="kt_modal_karyawan_tambah" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                <div class="modal-dialog modal-lg" role="document">
+                                <div class="modal-dialog" role="document">
                                     <div class="modal-content">
                                         <div class="modal-header">
                                             <h5 class="modal-title" id="exampleModalLabel">Treatment Selesai</h5>
